Fixed nav spacing for future links

--- a/styles.css
+++ b/styles.css
@@ -238,6 +238,17 @@ ul{
 	.nav{
 		font-size:0.7em;
 	}
+	.navOption{
+		width: 3em;
+		padding: 1.5em;
+	}
+	#logo{
+		font-size:2em;
+		padding: 0.5em 0.5em;
+		margin: 0 0.5em 0 0;
+		border: solid 1px black;
+		border-radius: 80%;
+	}
 	.pic{
 		height: 200px;
 		margin-top: -200px;
